# plots

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  dev.ps1  docker-compose.cqrs.yml  docker-compose.dev.yml  docker-compose.yml
backend/: pyproject.toml
docs/: deployment.html  (+4 more)
services/api-gateway/: .env.example  Dockerfile  pyproject.toml
services/api-gateway/app/: config.py  database.py  main.py  middleware.py  proxy.py
services/api-gateway/app/audit/: middleware.py  models.py  router.py  service.py
services/api-gateway/app/common/: logging.py
services/api-gateway/app/common/middleware/: __init__.py  logging.py  rate_limit.py  request_id.py
services/api-gateway/app/routers/: backend.py  chat.py  plot.py
services/auth-service/: .env.example  Dockerfile  main.py  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 1b7e3a7f6412_remove_api_keys_table.py  2026_04_25_1751-8fc26df91f7c_rewrite_auth_schema_v2.py  2026_04_25_1757-45794e81999c_increase_session_device_type_to_.py  2026_04_29_0001-add_oauth_fields_to_users.py  2026_06_06_1838-18a4e8037c45_add_sheets_table.py  2026_06_06_1840-253da8654b6a_add.py  2026_06_06_1849-3a35d60cbd19_create_sheets_table.py  2026_06_29_0002-add_audit_logs_table.py
services/auth-service/app/: database.py
services/auth-service/app/audit/: models.py  router.py  schemas.py
services/auth-service/app/auth/dependencies/: __init__.py  dependencies.py
services/auth-service/app/auth/models/: __init__.py  permission_models.py  profile_models.py  role_models.py
services/auth-service/app/auth/routers/: auth_route.py  google_router.py  permission_route.py  profile_router.py
services/auth-service/app/auth/schemas/request/: __init__.py  auth_schemas.py  password_schemas.py  permission_schemas.py  role_schemas.py  schemas.py
services/auth-service/app/auth/service/: auth_service.py  azure_auth_service.py  google_auth_service.py  profile_service.py  role_service.py
services/auth-service/app/auth/utils/: __init__.py
services/auth-service/app/common/: health.py  internal_auth.py  logging.py  pagination.py
services/auth-service/app/common/permissions/: codes.py
services/auth-service/app/config/: __init__.py  app_config.py  database_config.py
services/auth-service/app/notifications/: email.py
services/auth-service/app/notifications/templates/: email_verification.html  password_reset.html  welcome.html
services/auth-service/app/plot/: models.py
services/auth-service/app/uploads/: models.py  schemas.py
services/chat-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/chat-service/alembic/: env.py
services/chat-service/alembic/versions/: 0001_chat_write_tables.py  0002_chat_read_tables.py
services/chat-service/app/: config.py  main.py  read_models.py  schemas.py  write_models.py
services/chat-service/app/commands/: handlers.py  schemas.py
services/chat-service/app/common/: internal_auth.py
services/chat-service/app/events/: schemas.py
services/chat-service/app/projections/: consumer.py
services/chat-service/app/queries/: handlers.py
services/chat-service/app/routers/: chat.py
(+294 files in other folders)
