[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication and authorization microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "structlog>=24.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "azure-storage-blob>=12.20.0",
    "azure-core>=1.40.0",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E711", "E712"]  # SQLAlchemy column comparisons use == True/False/None intentionally

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
